# aws_mouse

./: .gitignore  README.md  installros1.sh  resetsim.sh  updateos.sh
src/img_recognition/: CMakeLists.txt  README.md  package.xml
src/img_recognition/launch/: infer.launch
src/img_recognition/model/: README.md  flower.pth  recording.yaml  turtle.pth  turtles2.pth
src/img_recognition/msg/: Prediction.msg
src/img_recognition/param/: inference_model.yaml
src/img_recognition/src/: custommodel.py  inference_model.py  pretrianedmodel.py
src/jetbot_description/: CMakeLists.txt  package.xml
src/jetbot_description/config/: jetbot_diff_drive_control.yaml  jetbot_diff_drive_control_pid.yaml
src/jetbot_description/launch/: gazebo.launch  jetbot_description.launch  simple_nagivation.launch  spawn.launch
src/jetbot_description/rviz/: mapping_view.rviz
src/jetbot_description/script/: runforward.py
src/jetbot_description/urdf/: jetbot.gazebo.xacro  jetbot.urdf
src/jetbot_navigation/: CMakeLists.txt
src/jetbot_navigation/scripts/: node_follow_wall.py
src/jetbot_slam/: CMakeLists.txt  package.xml
src/jetbot_slam/launch/: jetbot_hector_slam.launch  jetbot_slam.launch
src/maze_demo/: CMakeLists.txt  node_maze6.py  package.xml  setup.py
src/maze_demo/launch/: explore_world.launch
src/maze_demo/scripts/: maze_explore.py  maze_runner.py  mm_movement.py  mm_movement_copy.py  node_follow_wall.py  node_follow_wall2.py  node_maze2.py  node_maze3.py  node_maze4.py  node_maze5.py  node_maze6.py  node_maze_runner.py  node_reading_laser.py  old_mr.py  run_template.py  run_template_deep_learning.py  scan_to_pointcloud.py  test_runner.py  utils.py
src/maze_demo/src/mouse_common/: utils.py
src/maze_world/: CMakeLists.txt  package.xml
src/maze_world/launch/: world.launch
src/maze_world/models/aws_logo/: model.config  model.sdf
src/maze_world/models/dandelion/: model.config  model.sdf
src/maze_world/models/ieee_logo/: model.config  model.sdf
src/maze_world/models/number1/: model.sdf
src/maze_world/models/smallnumber1/: model.sdf
src/maze_world/models/smallnumber2/: model.config  model.sdf
src/maze_world/models/smallnumber3/: model.config  model.sdf
src/maze_world/models/smallnumber_blue/: model.sdf
src/maze_world/models/smallnumber_green/: model.sdf
src/maze_world/models/smallnumber_red/: model.config  model.sdf
src/maze_world/models/smallnumber_rose/: model.sdf
src/maze_world/models/sunflower/: model.config  model.sdf
src/maze_world/models/temple_logo/: model.config  model.sdf
src/maze_world/models/tulip/: model.config  model.sdf
src/maze_world/scripts/: set_image.ipynb
src/maze_world/world/: empty_rose.world  extendedBase.world  final_maze.world  final_world.world  jetbotSize.world  tallWalls.world  wood_board.world
src/mouse_smach/: CMakeLists.txt  package.xml
src/mouse_smach/launch/: explore_world.launch
src/mouse_smach/scripts/: maze_fsm.py  mouse_fsm.py
(+13 files in other folders)
